# signal-anonymous-credentials

./: .gitignore  FFI.md  README.md  RUST_WISHLIST.md  credential.podspec
aeonflux/: Cargo.toml  LICENSE  README.md
aeonflux/src/: amacs.rs  credential.rs  elgamal.rs  errors.rs  issuer.rs  lib.rs  macros.rs  nonces.rs  parameters.rs  pedersen.rs  prelude.rs  proofs.rs  user.rs
amacs/: Cargo.toml
amacs/src/: amacs.rs  errors.rs  lib.rs
build-test/: README.md
build-test/alloc/: Cargo.toml
build-test/alloc/src/: lib.rs
build-test/aos/: Cargo.toml
build-test/aos/src/: lib.rs
build-test/electron/: Cargo.toml  README.md  electron.html  electron.wasm
build-test/electron/site/: electron.d.ts  electron.html  electron.js  electron_bg.wasm
build-test/electron/src/: lib.rs
build-test/ios/: Cargo.toml  README.md
build-test/ios/src/: lib.rs
build-test/ios/xcode/: BuildTest.swift  buildtest-bridging-header.h  buildtest.h
build-test/ios/xcode/RustBuildTest/: AppDelegate.swift  ViewController.swift
build-test/ios/xcode/RustBuildTest.xcodeproj/: project.pbxproj
build-test/ios/xcode/RustBuildTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build-test/ios/xcode/RustBuildTest.xcodeproj/project.xcworkspace/xcuserdata/isis.xcuserdatad/: UserInterfaceState.xcuserstate
build-test/ios/xcode/RustBuildTest.xcodeproj/xcuserdata/isis.xcuserdatad/xcschemes/: xcschememanagement.plist
build-test/ios/xcode/RustBuildTest/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
build-test/ios/xcode/RustBuildTestTests/: RustBuildTestTests.swift
build-test/ios/xcode/RustBuildTestUITests/: RustBuildTestUITests.swift
build-test/maths/: Cargo.toml
build-test/maths/src/: lib.rs
elgamal/: Cargo.toml  README.md
elgamal/src/: elgamal.rs  lib.rs
ffi/: BUILD-ANDROID.md  Cargo.toml  Makefile  README.md  create-ndk-standalone.sh  ffi-api.md
ffi/src/: c.rs  lib.rs  macros.rs
ffi/src/include/: credential.h
java/src/main/java/org/signal/credential/: util.java
jni/Credential/: settings.gradle
jni/Credential/app/: build.gradle
jni/Credential/app/src/androidTest/java/org/signal/credential/: ExampleInstrumentedTest.java
jni/Credential/app/src/main/: AndroidManifest.xml
jni/Credential/app/src/main/res/values/: strings.xml
jni/Credential/app/src/test/java/org/signal/credential/: ExampleUnitTest.java
jni/Credential/rust/src/androidTest/java/org/signal/rust/: ExampleInstrumentedTest.java
jni/Credential/rust/src/main/: AndroidManifest.xml
jni/Credential/rust/src/main/res/values/: strings.xml
jni/Credential/rust/src/test/java/org/signal/rust/: ExampleUnitTest.java
signal-credential/: Cargo.toml
signal-credential/benches/: credential-benches.rs  credential-benchmarks.rs
signal-credential/src/: credential.rs  errors.rs  issuer.rs  lib.rs  parameters.rs  pedersen.rs  phone_number.rs  proofs.rs  proofs_macros.rs  roster.rs  traits.rs  user.rs
signal-credential/tests/: full-protocol.rs
swift/: Makefile  Podfile  credential.podspec
swift/Credential/: Credential.swift  credential-bridging-header.h  credential.h
swift/Credential.xcodeproj/: project.pbxproj
swift/Credential.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/Credential.xcworkspace/: contents.xcworkspacedata
swift/Credential/Credential.xcodeproj/: project.pbxproj
swift/Credential/Credential.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wasm/: Cargo.toml  Makefile  README.md
wasm/src/: credential.d.ts  credential.js  credential.wasm  credential_bg.wasm  js.rs  lib.rs
zkp-expand/: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  aeonflux_proofs.rs  signal_credential_proofs.rs
zkp-expand/src/: lib.rs
