[package]
name = "aeonflux"
version = "0.1.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>"]
readme = "README.md"
license = "BSD-3-Clause"
categories = ["cryptography"]
keywords = ["MAC", "zero-knowledge", "anonymous", "credential", "algebraic-MAC"]
description = "Composable, lightweight, fast attribute-based anonymous credentials with infinite (aeon) rerandomised (flux) presentations using algebraic message authentication codes (aMACs)"
exclude = [
    "**/.gitignore",
    ".gitignore",
    ".travis.yml",
]
autobenches = false

## XXX criterion can't find the crate unless the following is commented out?
[lib]
name = "aeonflux"
#crate-type = ["staticlib", "rlib", "cdylib"]

# Heck yeah, XSS As A Service.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/curve25519-dalek-0.13.2/rustdoc-include-katex-header.html"]
features = ["nightly"]

[dependencies]
clear_on_drop = { version = "0.2" }
curve25519-dalek = { version = "0.21", default-features = false }
failure = { version = "0.1", default-features = false }
rand_core = { version = "0.2.1", default-features = false }
# TODO The zkp crate currently requires both serde and serde_derive.
serde = { version = "1" }
serde_derive = { version = "1" }
sha2 = { version = "0.7" }
subtle = { version = "1" }
zkp = { version = "0.4" }

[dev-dependencies]
criterion = { version = "0.2" }
rand = { version = "0.5", default-features = false }

[replace]
"curve25519-dalek:0.21.0" = { git = "https://github.com/isislovecruft/curve25519-dalek", branch = "fix/signal-changes" }
"zkp:0.4.3" = { git = "https://github.com/isislovecruft/zkp", branch = "fix/signal-changes" }

# [[bench]]
# name = "aeonflux-benchmarks"
# harness = false

[features]
default = [ "std", "u64_backend" ]
# TODO The zkp crate currently requires std (for no seemingly good reason).
std = [ "curve25519-dalek/std" ]
nightly = [ "clear_on_drop/nightly", "curve25519-dalek/nightly" ]
asm = [ "sha2/asm" ]
u32_backend = [ "curve25519-dalek/u32_backend" ]
u64_backend = [ "curve25519-dalek/u64_backend" ]
avx2_backend = [ "curve25519-dalek/avx2_backend" ]
