[package]
name = "ffi"
version = "0.1.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>"]
description = "C, Java JNI, and JS/Wasm FFI APIs for Signal's anonymous credentials"
publish = false

[dependencies]
libc = { version = "0.2", default-features = false }
rand = { version = "0.5", default-features = false }
signal-credential = { version = "*", path = "../signal-credential", default-features = false }

[replace]
"zkp:0.4.3" = { git = "https://github.com/isislovecruft/zkp", branch = "fix/stuff", default-features = false }

[features]
default = [ "nightly", "alloc" ]
alloc = [ "signal-credential/alloc" ]
std = [ "signal-credential/std" ]
nightly = [ "signal-credential/nightly" ]
u32_backend = [ "signal-credential/u32_backend" ]
u64_backend = [ "signal-credential/u64_backend" ]
avx2_backend = [ "signal-credential/avx2_backend" ]
