[package]
name = "signal-credential"
version = "0.1.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>"]
publish = false
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/signalapp/groupzk"
categories = ["no-std", "cryptography"]
keywords = ["zero-knowledge", "anonymous-credentials"]
description = "A pure-Rust library for anonymous attribute-based credentials using algebraic message authentication codes (aMACs)"
exclude = [
    "**/.gitignore",
    ".gitignore",
    ".travis.yml",
]
autobenches = false

## XXX criterion can't find the signal-credential crate unless the following is commented out?
#
#[lib]
#name = "credential"
#crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
aeonflux = { version = "0.1.0", path = "../aeonflux" }
curve25519-dalek = { version = "0.19", default-features = false }
failure = { version = "0.1", default-features = false }
rand_core = { version = "0.2.1", default-features = false }
# TODO The zkp crate currently requires both serde and serde_derive.
serde = { version = "1" }
serde_derive = { version = "1" }
zkp = { version = "0.4" }

[dev-dependencies]
criterion = { version = "0.2" }
rand = { version = "0.5", default-features = false }

[replace]
"zkp:0.4.3" = { git = "https://github.com/isislovecruft/zkp", branch = "fix/signal-changes" }

[[bench]]
name = "credential-benchmarks"
harness = false

[features]
default = [ "std", "u64_backend" ]
# TODO The zkp crate currently requires std (for no seemingly good reason).
std = [ "aeonflux/std", "curve25519-dalek/std" ]
nightly = [ "aeonflux/nightly", "curve25519-dalek/nightly" ]
alloc = [ "curve25519-dalek/alloc" ]
asm = [ "aeonflux/asm" ]
u32_backend = [ "aeonflux/u32_backend", "curve25519-dalek/u32_backend" ]
u64_backend = [ "aeonflux/u64_backend", "curve25519-dalek/u64_backend" ]
avx2_backend = [ "aeonflux/avx2_backend", "curve25519-dalek/avx2_backend" ]
