[package]
name = "wasm"
version = "0.1.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>"]

# NOTE: Having a cdylib crate (required for wasm) requires a dynamically linked
#       std/core Rust library, which is compiled to rely on the behaviour of
#       panics, and thus we cannot use `[profile.release] panic = abort`.
[lib]
name = "credential"
crate-type = ["cdylib"]

[dependencies.signal-credential]
version = "0.1"
path = "../signal-credential"
default-features = false
features = ["std", "nightly", "u32_backend"]

[dependencies]
rand = { version = "0.5" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[replace]
"zkp:0.4.3" = { git = "https://github.com/isislovecruft/zkp", branch = "fix/stuff", default-features = false }
