[package]
name = "aos"
version = "0.1.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>"]
publish = false

[lib]
name = "buildtest"
crate-type = ["cdylib"]

[dependencies]
maths = { version = "0.1.0", path = "../maths", features = ["u64_backend"] }
alloc = { version = "0.1.0", path = "../alloc" }
